--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lottie-react-native": "6.7.0",
     "react": "18.2.0",
     "react-native": "^0.74.3",
+    "react-native-confirmation-code-field": "^7.4.0",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-responsive-fontsize": "^0.5.1",
@@ -30,7 +31,8 @@
     "react-native-snap-carousel": "^3.9.1",
     "react-redux": "^8.1.2",
     "redux": "^4.2.1",
-    "redux-thunk": "^2.4.2"
+    "redux-thunk": "^2.4.2",
+    "expo-image-picker": "~15.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0"
