--- a/package.json
+++ b/package.json
@@ -19,25 +19,27 @@
     "expo-font": "^12.0.9",
     "expo-image-picker": "~15.0.7",
     "expo-linear-gradient": "~13.0.2",
+    "expo-location": "~17.0.1",
     "expo-sharing": "~12.0.1",
     "expo-status-bar": "~1.12.1",
     "expo-updates": "^0.25.21",
     "lottie-react-native": "6.7.0",
     "react": "18.2.0",
     "react-native": "^0.74.3",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-confirmation-code-field": "^7.4.0",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-maps": "1.14.0",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-snap-carousel": "^3.9.1",
+    "react-native-svg": "^15.6.0",
     "react-redux": "^8.1.2",
     "redux": "^4.2.1",
-    "redux-thunk": "^2.4.2",
-    "react-native-maps": "1.14.0",
-    "expo-location": "~17.0.1"
+    "redux-thunk": "^2.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0"
